--- a/src/assets/css/Navbar.css
+++ b/src/assets/css/Navbar.css
@@ -12,15 +12,19 @@
 }
 
 header {
-    padding-inline: 1rem;
+    padding-inline: 2rem;
     padding-block: 1.3rem;
+
     background-color: white;
-    position: sticky;
+    position: fixed;
+    box-sizing: border-box;
+    width: 100%;
+    z-index: 1;
 }
 
 .container-fluid {
     margin-inline: auto;
-    padding-inline: 0.8rem
+    /* padding-inline: 0.8rem */
 }
 
 .button {
