--- a/src/assets/css/SectionTypeWriterHero.css
+++ b/src/assets/css/SectionTypeWriterHero.css
@@ -1,5 +1,5 @@
 .hero {
-    padding-top: 6rem;
+    padding-top: 11rem;
     padding-bottom: 4rem;
     margin-inline: auto;
 }
